# VDSProject_Group4

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
src/: Manager.cpp  Manager.h  ManagerInterface.h  main.cpp
src/bench/: CMakeLists.txt  CircuitToBDD.cpp  CircuitToBDD.hpp  main_bench.cpp
src/reachability/: Reachability.cpp  Reachability.h  main_test.cpp
src/test/: CMakeLists.txt  main_test.cpp
src/verify/: CMakeLists.txt
